# PickPerfect

backend/: README.md  pyproject.toml
backend/indexing_pipeline/: consumer.py  producer.py  sample_data.json
backend/src/pickperfect/: main.py
backend/src/pickperfect/api/: deps.py
backend/src/pickperfect/api/v1/: __init__.py  auth.py  events.py  products.py
backend/src/pickperfect/config/: settings.py
backend/src/pickperfect/core/: database.py  security.py
backend/src/pickperfect/models/: event.py  product.py  user.py
backend/src/pickperfect/services/: embedding_service.py  product_service.py  recommendation_service.py  user_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/account/: page.tsx
frontend/app/checkout/: page.tsx
frontend/app/login/: page.tsx
frontend/app/orders/: page.tsx
frontend/app/products/: page.tsx
frontend/app/products/men/: page.tsx
frontend/components/: auth-provider.tsx  cart-provider.tsx  category-section.tsx  featured-products.tsx  footer.tsx  header.tsx  hero-section.tsx  location-deals.tsx  product-filters.tsx  product-grid.tsx  product-pagination.tsx  recommended-products.tsx
frontend/lib/: api.ts
frontend/src/: App.tsx
frontend/src/components/: LoginModal.tsx  Navbar.tsx  ProductCard.tsx  ProductDetailModal.tsx
frontend/src/data/: mockData.ts
frontend/src/hooks/: useCart.ts
frontend/src/pages/: CartPage.tsx  HomePage.tsx  Personalize.tsx  ProductsPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
(+1 files in other folders)
